Bug 74704 - [Bisected]All Intel_gpu_tools cases fail with *ERROR* Attempting to mmap a purgeable buffer when run nightly testing
Summary: [Bisected]All Intel_gpu_tools cases fail with *ERROR* Attempting to mmap a pu...
Status: CLOSED FIXED
Alias: None
Product: DRI
Classification: Unclassified
Component: DRM/Intel (show other bugs)
Version: unspecified
Hardware: All Linux (All)
: highest blocker
Assignee: Chris Wilson
QA Contact: Intel GFX Bugs mailing list
URL:
Whiteboard:
Keywords:
: 74954 (view as bug list)
Depends on:
Blocks:
 
Reported: 2014-02-08 08:31 UTC by lu hua
Modified: 2016-10-12 08:55 UTC (History)
1 user (show)

See Also:
i915 platform:
i915 features:


Attachments

Description lu hua 2014-02-08 08:31:01 UTC
System Environment:
--------------------------
Platform: Broadwell
kernel    (drm-intel-nightly)8f5284d0165252f41609a97acc2755234b22cf15

Bug detailed description:
-----------------------------
All igt cases fail when nightly testing.
Fail with following error:
<3>[ 4098.078903] [drm:i915_gem_mmap_gtt] *ERROR* Attempting to mmap a purgeable buffer
<3>[ 4098.079040] [drm:i915_gem_object_get_pages] *ERROR* Attempting to obtain a purgeable object
<3>[ 4098.079173] [drm:i915_gem_object_get_pages] *ERROR* Attempting to obtain a purgeable object

Run any case via manually, this error is not replicable.

Test log:
@test: Piglit_igt/igt_kms_flip_absolute-wf_vblank
info: @@@Returncode: 0

test case start at: Thu Dec 12 01:08:08 2013
test case end at:   Thu Dec 12 01:08:51 2013

Errors:


Dmesg:
<3>[ 4098.078903] [drm:i915_gem_mmap_gtt] *ERROR* Attempting to mmap a purgeable buffer
<3>[ 4098.079040] [drm:i915_gem_object_get_pages] *ERROR* Attempting to obtain a purgeable object
<3>[ 4098.079173] [drm:i915_gem_object_get_pages] *ERROR* Attempting to obtain a purgeable object


Output:
IGT-Version: 1.5-g971c7db (x86_64) (Linux: 3.13.0_drm-intel-nightly_8f5284_20140208+ x86_64)
Using monotonic timestamps
Beginning absolute-wf_vblank on crtc 3, connector 10
  1920x1080 60 1920 1966 1996 2080 1080 1082 1086 1112 0xa 0x48 138780
........................................................
absolute-wf_vblank on crtc 3, connector 10: PASSED

Beginning absolute-wf_vblank on crtc 5, connector 10
  1920x1080 60 1920 1966 1996 2080 1080 1082 1086 1112 0xa 0x48 138780
...........................................................
absolute-wf_vblank on crtc 5, connector 10: PASSED

Beginning absolute-wf_vblank on crtc 7, connector 10
  1920x1080 60 1920 1966 1996 2080 1080 1082 1086 1112 0xa 0x48 138780
...........................................................
absolute-wf_vblank on crtc 7, connector 10: PASSED

Subtest absolute-wf_vblank: SUCCESS

returncode: 0
summary: Intel_gpu_tools/igt_kms_flip_absolute-wf_vblank    FAIL
Comment 1 lu hua 2014-02-10 01:58:39 UTC
It happens on all platforms.
The latest known good commit(igt):5ecac45ff08945f99365ff6d29ba21f896cdb1b6
The latest known bad commit(igt): 971c7db2c81d0573caf1d35d70f48e6fdace90d0
Comment 2 lu hua 2014-02-10 02:57:56 UTC
Bisect shows 5c9c8841eb66676dd65e84d51fa87a4b4b8ad764 is the first bad commit.
commit 5c9c8841eb66676dd65e84d51fa87a4b4b8ad764
Author:     Chris Wilson <chris@chris-wilson.co.uk>
AuthorDate: Tue Feb 4 14:14:31 2014 +0000
Commit:     Daniel Vetter <daniel.vetter@ffwll.ch>
CommitDate: Tue Feb 4 17:03:39 2014 +0100

    tests: Add gem_madvise

    Exercise that calling madvise produces expected results

    Signed-off-by: Chris Wilson <chris@chris-wilson.co.uk>
    Signed-off-by: Daniel Vetter <daniel.vetter@ffwll.ch>
Comment 3 Chris Wilson 2014-02-10 08:26:03 UTC
Your test runner is extremely broken if it ascribes that to all test cases.
Comment 4 Daniel Vetter 2014-02-10 09:27:58 UTC
(In reply to comment #3)
> Your test runner is extremely broken if it ascribes that to all test cases.

Yeah, this is fishy ... can you please investigate?

Bug itself is fixed with

commit c3bb1f382a5097c82145dcdb2a5d054c8af731ec
Author: Chris Wilson <chris@chris-wilson.co.uk>
Date:   Mon Feb 10 09:03:50 2014 +0000

    drm/i915: Downgrade *ERROR* message for invalid user input
Comment 5 lu hua 2014-02-11 02:26:02 UTC
Verified.Fixed.
Comment 6 Chris Wilson 2014-02-14 09:06:50 UTC
*** Bug 74954 has been marked as a duplicate of this bug. ***
Comment 7 lu hua 2014-02-17 06:43:57 UTC
(In reply to comment #3)
> Your test runner is extremely broken if it ascribes that to all test cases.

Our testrunner can work well to correctly assign dmesg output to individual tests as it did before. Before running every case we will clear the dmesg to avoid older issue impact new running one.
We have do a deeper investigate to find the root cause, finally find the ERROR: 
[ 6697.667202] [drm:i915_gem_mmap_gtt] *ERROR* Attempting to mmap a purgeable buffer
[ 6697.668469] [drm:i915_gem_object_get_pages] *ERROR* Attempting to obtain a purgeable object
[ 6697.669782] [drm:i915_gem_object_get_pages] *ERROR* Attempting to obtain a purgeable object
These ERROR only appeared when running the command under piglit dictory: ./piglit-print-commands.py tests/igt.py which command our testrunner using to get the i-g-t case's running parameter.
So the reason of this issue doesn't involved by QA's testrunner.
Comment 8 Jari Tahvanainen 2016-10-12 08:55:59 UTC
Closing verified+fixed.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.